# yt-watch-history

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  docker-compose.yaml  example.env  pyproject.toml  requirements.sh  requirements.txt  run_pipeline.py
api/: _errors.py  _logger.py  _utils.py  app.py  configs.py
api/models/youtube/: channel_video.py  video.py
api/routes/db/youtube/: channel_video.py  video.py
api/routes/youtube/: video.py
backend/: Dockerfile  api_utils.py  app.py  errors.py  requirements-ml.txt  requirements.txt  ruff.toml
backend/api/: _logger.py  _utils.py  configs.py
backend/api/models/: ctt.py
backend/api/models/youtube/: __init__.py  channel_video.py  video.py
backend/api/routes/: __init__.py
backend/api/routes/db/: __init__.py  connect.py  ctt.py
backend/api/routes/db/youtube/: __init__.py  channel_video.py  video.py
backend/api/routes/ml/: __init__.py  channel_reco.py  ctt.py
backend/api/routes/youtube/: __init__.py  video.py
backend/ml/: ctt.py  io.py  typing.py
backend/ml/base/: monitoring.py
backend/ml/channel_reco/: __init__.py  configs.py  data.py  prediction.py  training.py
backend/ml/channel_reco/steps/: data.py  prediction.py  training.py
backend/ml/ctt/: configs.py  data.py  model.py  monitoring.py  prediction.py  training.py
configs/: .pre-commit-config.yaml
data/: contentTypeTaggedChannel.json
docs/: CttTitleModel.md  MLModelMigration.md  MigrateFrontend.md  ModelPipeline.md
frontend/: Dockerfile  README.py  _io.py  configs.py  constants.py  requirements.txt  st_utils.py  utils.py
frontend/pages/: 🐻‍❄️_YT_History_Basic.py  📊_Advance_Insights.py  📺_Recommend_Channel.py
frontend/youtube/: __init__.py  channel_reco.py  content_type_tagging.py  ingest_yt_history.py  video_details.py
ml/: utils.py
ml/channel_reco/steps/: data.py  model.py
ml/src/base/: monitoring.py
ml/src/channel_reco/: model.py  prediction.py  training.py
ml/src/ctt/: monitoring.py  prediction.py  training.py
pages/: 🐻‍❄️_YT_History_Basic.py  📊_Advance_Insights.py
