# This project do not use pyproject.toml as project setup file
# This toml file is just to understand the project description
# However, ``ruff`` (linter & formatter) uses this file as config file

[project]
name = "yt-watch-history"
version = '0.0.0'
description = "Analyzes user's YouTube watch history data and show plots in streamlit web app."
authors = [{ name = "Anshul Raj Verma", email = "arv.anshul.1864@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"

[project.urls]
homepage = "https://github.com/arv-anshul/yt-watch-history"

[tool.ruff]
target-version = "py311"
show-fixes = true
src = ["backend", "frontend"]

[tool.ruff.lint]
extend-select = [
    "B",
    "BLE",
    "C4",
    "C90",
    "E",
    "F",
    "I",
    "ICN",
    "INP",
    "ISC",
    "PGH",
    "PIE",
    "PTH",
    "Q",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TCH",
    "UP",
    "W",
    "YTT",
]
extend-ignore = [
    "B008",
    "B905",
    "E501",
    "E741",
    "INP001",
    "ISC001",
    "N818",
    "PGH003",
    "S101",
    "S301",
    "UP035",
]
extend-unfixable = ["B", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/routes/*" = ["TCH"]
